--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "dayjs": "^1.11.10",
     "glob": "^11.0.0",
     "microcms-js-sdk": "^3.1.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "^14.1.4",
+    "react": "^18.2.1",
+    "react-dom": "^18.2.1",
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.16.0",
-    "eslint-config-next": "15.0.3",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.0.3",
     "typescript": "^5"
   }
 }
