--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "glob": "^11.0.0",
     "microcms-js-sdk": "^3.1.0",
     "next": "^14.1.4",
+    "nextjs-basic-auth-middleware": "^3.1.0",
     "react": "^18.2.1",
     "react-dom": "^18.2.1",
     "rimraf": "^6.0.1"
